tests/cases/pass/namespace_using.cs
using System;

namespace Demo.App {
    class Program {
        static void Main() {
            Console.WriteLine(321);
        }
    }
}
