tests/cases/fail/continue_outside_loop.cs
class Program { static void Main() { continue; } }
